# Richter

./: CMakeLists.txt  README.md  setup.py
.claude/: settings.local.json
benchmarks/: benchmark.cpp
include/richter/: boundary.h  config.h  cuda_buffer.h  fwi.h  fwi_2d.h  fwi_cpu.h  kernels.h  model.h  rtm.h  rtm_cpu.h  types.h  wavelet.h
python/: bindings.cpp
src/: boundary.cpp  boundary.cu  fwi.cpp  fwi_2d.cpp  fwi_2d_kernels.cu  fwi_cpu.cpp  fwi_kernels.cu  imaging.cu  model.cpp  receiver.cu  rtm.cpp  rtm_cpu.cpp  wavelet.cpp
src/kernels/: hello_cpu.cpp  hello_hybrid.cu  hello_naive.cu  hello_register.cu  hello_shmem.cu
tests/: runtests.cpp
tools/: debug_rtm.py  fwi_2d_demo.cpp  fwi_demo.cpp  rtm_cpu_demo.cpp  rtm_demo.cpp  snapshot.cpp  view_fwi.py  view_fwi_2d.py  view_gradient.py  view_gradients.py  view_rtm.py  view_slice.py
